Prevent scrolling collapsed code blocks ref #3

--- a/webapp/src/pages/globals.css
+++ b/webapp/src/pages/globals.css
@@ -195,6 +195,7 @@ body {
 
 .overlay-gradient {
   position: relative;
+  pointer-events: none;
 }
 
 .overlay-gradient::after {
